# cyberharness

./: .gitignore  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP-v1.1.md  ROADMAP-v1.2.md  ROADMAP-v1.3.md  ROADMAP-v1.4.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-scaffold/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-04-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-session-manager/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-router-local-models/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-04-PLAN.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/pending/: TODO-001-ollama-tool-bugs.md  TODO-002-workspace-container-runtime.md  TODO-003-workspace-config-schema.md  TODO-004-k8s-support.md
docs/: architecture.md  session-design.md
