[project]
name = "cyberharness-workspace-root"
version = "0.0.0"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.11",
    "textual-dev>=1.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/client/tests"]
